--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -26,6 +26,9 @@ FROM node:20-alpine AS runner
 
 RUN corepack enable && corepack prepare pnpm@9.14.2 --activate
 
+# Install wget for healthcheck
+RUN apk add --no-cache wget
+
 WORKDIR /app
 
 # Copy built files
@@ -40,15 +43,18 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 # Install production dependencies only
 RUN pnpm install --frozen-lockfile --prod
 
-# Create data directory
-RUN mkdir -p /data
+# Create data directory with proper permissions
+RUN mkdir -p /data && chmod 755 /data
 
 ENV NODE_ENV=production
 ENV PORT=3001
 ENV HOST=0.0.0.0
 ENV DATABASE_PATH=/data/openfacilitator.db
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3001/health || exit 1
+
 EXPOSE 3001
 
 CMD ["node", "packages/server/dist/index.js"]
-
