--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "@openfacilitator/core": "workspace:*",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "@x402jobs/sdk": "0.2.2",
     "better-auth": "^1.2.0",
     "better-sqlite3": "^11.6.0",
     "bs58": "^6.0.0",
